# astrofetch

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT_NOTES.md  IMPLEMENTATION_ROADMAP.md  SCREENFETCH_EXECUTION_PLAN.md  procedural-galaxies.md
src/: app.rs  cli.rs  density.rs  display_plan.rs  engine.rs  error.rs  galaxy.rs  layout.rs  main.rs  render.rs  setup_shell.rs  system.rs  terminal.rs
src/render/: ansi.rs  ascii.rs  color.rs  hash.rs  profile.rs  shade.rs  starfield.rs  stretch.rs
src/system/: collector.rs  command.rs  desktop.rs  disk.rs  fields.rs  format.rs  mod.rs  parsers.rs
