[package]
name = "astrofetch"
version = "0.2.0"
edition = "2021"
description = "A screenFetch-inspired terminal app with procedural astrophysical ASCII art"
license = "MIT"
keywords = ["cli", "terminal", "fetch", "ascii-art"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
sysinfo = "0.30"
unicode-width = "0.1"
is-terminal = "0.4"

[dev-dependencies]
