[package]
name = "astrofetch"
version = "0.2.8"
edition = "2021"
description = "A screenFetch-inspired terminal app with procedural astrophysical ASCII art"
license = "MIT"
repository = "https://github.com/elacerda/astrofetch"
homepage = "https://github.com/elacerda/astrofetch"
readme = "README.md"
keywords = ["cli", "terminal", "fetch", "ascii-art"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
sysinfo = "0.30"
unicode-width = "0.1"
is-terminal = "0.4"
crossterm = "0.29"
noise = "0.9"

[dev-dependencies]
